--- a/src/pages/user-perfil/user-perfil.html
+++ b/src/pages/user-perfil/user-perfil.html
@@ -6,12 +6,18 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
+        <ion-fab top right>
+            <button ion-fab color="danger" (click)="logOf()">
+                <ion-icon name="log-out"></ion-icon>
+            </button>
+        </ion-fab>
     </ion-navbar>
 </ion-header>
 <ion-content padding *ngIf="!canEnter">
     <please-login></please-login>
 </ion-content>
 <ion-content fullscreen #myContent *ngIf="canEnter">
+
     <ion-toolbar color="light" mode="md">
         <ion-segment color="dark" mode="md" [(ngModel)]="section">
             <ion-segment-button value="one">
