--- a/src/pages/adote/adote.html
+++ b/src/pages/adote/adote.html
@@ -9,13 +9,13 @@
     </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
-    <ion-card id="adote-card21" *ngFor="let post of posts" (click)="goToPerfil(post.petKey, post.payload)">
+    <ion-card id="adote-card21" *ngFor="let post of posts" (click)="goToPerfil(post.key, post)">
         <ion-list>
-            <img  src="{{post.payload.fotoUrls[0]}}"/>
+            <img  src="{{post.fotoUrls[0]}}"/>
 
             <ion-item color="assertive" id="adote-list-item4">
-                <ion-icon name="logo-octocat" item-left><h5>{{post.payload.nome}}</h5></ion-icon>
-                <ion-icon name="paw" item-left><h5>{{post.payload.raca}}</h5></ion-icon>
+                <ion-icon name="logo-octocat" item-left><h5>{{post.nome}}</h5></ion-icon>
+                <ion-icon name="paw" item-left><h5>{{post.raca}}</h5></ion-icon>
                 <ion-icon name="pin" item-left><h5>{{post.distancia | number:'1.0-0'}} KM</h5></ion-icon>
             </ion-item>
         </ion-list>
