--- a/src/pages/mensagem/mensagem.html
+++ b/src/pages/mensagem/mensagem.html
@@ -1,5 +1,4 @@
 <ion-header>
-
     <ion-navbar>
         <ion-title>{{titulo}}</ion-title>
     </ion-navbar>
@@ -31,7 +30,7 @@
 
 </ion-content>
 
-<ion-footer no-border [style.height]="showEmojiPicker ? '255px' : '55px'">
+<ion-footer no-border [ngStyle]="{'height':showEmojiPicker == false ? '55px' : '255px' }">
     <div class="input-wrap">
         <button ion-button clear icon-only item-right (click)="switchEmojiPicker()">
             <ion-icon name="md-happy"></ion-icon>
@@ -42,7 +41,7 @@
                   (keyup.enter)="sendMessage(msgText)"
                   (focusin)="onFocus()">
     </textarea>
-        <button ion-button clear icon-only item-right (click)="sendMessage(msgText)">
+        <button ion-button clear icon-only item-right [disabled]="!msgText" (click)="sendMessage(msgText)">
             <ion-icon name="ios-send" ios="ios-send" md="md-send"></ion-icon>
         </button>
     </div>
