ONESIGNAL NATIVO E CHAT POR API E MODIFICADO

--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -8,7 +8,7 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page8">
+<ion-content padding id="page8" *ngIf="pet">
 
   <ion-card id="perfil-card22">
     <ion-list>
