--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ProfilePage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
     <ion-navbar>
@@ -15,8 +9,16 @@
 
 <ion-content padding>
 
-    <form (ngSubmit)="createProfile()">
-        <button ion-button type="submit" block>Criar perfil</button>
+    <form [formGroup]="profile">
+        <ion-item>
+            <ion-label>
+                Seu nome:
+            </ion-label>
+            <ion-input type="text" name="nome" formControlName="nome" [(ngModel)]="profile.nome"></ion-input>
+        </ion-item>
+        <ion-input type="text" name="nome" formControlName="pushToken" [(ngModel)]="pushToken"></ion-input>
+
+        <button ion-button type="submit" block (click)="createProfile(userId)" [disabled]="!profile.valid">Criar perfil</button>
     </form>
 
 </ion-content>
