--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -1,101 +1,95 @@
 <ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>
-      {{ "Perfil" | translate }}
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            {{ "Perfil" | translate }}
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 <ion-content padding id="page8" *ngIf="pet">
 
-  <ion-card id="perfil-card22">
-    <ion-list>
-      <ion-item color="none" id="perfil-list-item9">
-        <ion-avatar item-left>
-          <img />
-        </ion-avatar>
-        <h2>
-          {{pet.nome}}
-        </h2>
-      </ion-item>
-      <ion-slides pager="true" >
-        <ion-slide *ngFor="let photo of pet.fotoUrls">
-          <img [src]="photo" />
-        </ion-slide>
-      </ion-slides>
-      <div id="perfil-markdown3" style="text-align:justify;" class="show-list-numbers-and-dots">
-        <p style="color:#000000;">
-         {{pet.informacoes}}
-        </p>
-      </div>
-      <ion-item color="none" id="perfil-list-item11">
-        <ion-icon name="paw" item-left></ion-icon>
-        {{ "Espécie" | translate }} : {{pet.especie}}
-      </ion-item>
-      <ion-item color="none" id="perfil-list-item12">
-        <ion-icon name="logo-octocat" item-left></ion-icon>
-        {{ "Raça" | translate }} : {{pet.raca}}
-      </ion-item>
-      <ion-item color="none" id="perfil-list-item13">
-        <ion-icon name="female" item-left></ion-icon>
-        {{"Sexo" | translate }} :  {{pet.sexo}}
-      </ion-item>
-      <ion-item color="none" id="perfil-list-item14">
-        <ion-icon name="information-circle" item-left></ion-icon>
-        {{"Idade" | translate }} : {{pet.idade}}
-      </ion-item>
-      <ion-item color="none" id="perfil-list-item15">
-        <ion-icon name="whatsapp" item-left></ion-icon>
-        {{"Whats" | translate }} : {{pet.whatsapp}}
-      </ion-item>
-    </ion-list>
-  </ion-card>
+    <ion-card id="perfil-card22">
+        <ion-list>
+            <ion-item color="none" id="perfil-list-item9">
+                <ion-avatar item-left>
+                    <img/>
+                </ion-avatar>
+                <h2>
+                    {{pet.nome}}
+                </h2>
+            </ion-item>
+            <ion-slides pager="true">
+                <ion-slide *ngFor="let photo of pet.fotoUrls">
+                    <img [src]="photo"/>
+                </ion-slide>
+            </ion-slides>
+            <div id="perfil-markdown3" style="text-align:justify;" class="show-list-numbers-and-dots">
+                <p style="color:#000000;">
+                    {{pet.informacoes}}
+                </p>
+            </div>
+            <ion-item color="none" id="perfil-list-item11">
+                <ion-icon name="paw" item-left></ion-icon>
+                {{ "Espécie" | translate }} : {{pet.especie}}
+            </ion-item>
+            <ion-item color="none" id="perfil-list-item12">
+                <ion-icon name="logo-octocat" item-left></ion-icon>
+                {{ "Raça" | translate }} : {{pet.raca}}
+            </ion-item>
+            <ion-item color="none" id="perfil-list-item13">
+                <ion-icon name="female" item-left></ion-icon>
+                {{"Sexo" | translate }} : {{pet.sexo}}
+            </ion-item>
+            <ion-item color="none" id="perfil-list-item14">
+                <ion-icon name="information-circle" item-left></ion-icon>
+                {{"Idade" | translate }} : {{pet.idade}}
+            </ion-item>
+            <ion-item color="none" id="perfil-list-item15">
+                <ion-icon name="whatsapp" item-left></ion-icon>
+                {{"Whats" | translate }} : {{pet.whatsapp}}
+            </ion-item>
+        </ion-list>
+    </ion-card>
 
-  <!--<div *ngIf="!donoDaPostagem" >-->
+    <!--<div *ngIf="!donoDaPostagem" >-->
     <!--<button id="perfil-button7" ion-button color="assertive" block (click)="goToChat()">-->
-      <!--Abrir Chat-->
+    <!--Abrir Chat-->
     <!--</button>-->
-  <!--</div>-->
-  <!--<div *ngIf="donoDaPostagem">-->
+    <!--</div>-->
+    <!--<div *ngIf="donoDaPostagem">-->
     <!--<button id="marcarAdotado" ng-click="marcarAdotado(petPerfil, petKey)" class="button button-assertive  button-block">Marcar como adotado</button>-->
-  <!--</div>-->
+    <!--</div>-->
 
-  <div *ngIf="!donoDaPostagem">
-    <button id="abrirChat" ion-button color="assertive" block (click)="goToChat()">
-      {{ "Abrir Chat" | translate }}
+    <div *ngIf="!donoDaPostagem">
+        <button id="abrirChat" ion-button color="assertive" block (click)="goToChat()">
+            {{ "Abrir Chat" | translate }}
+        </button>
+    </div>
+
+
+    <div id="perfil-markdown4" style="text-align:center;" class="show-list-numbers-and-dots">
+        <p style="color:#000000;">
+            {{ "Responsável" | translate }}
+        </p>
+    </div>
+    <ion-list id="perfil-list5">
+        <ion-item color="none" id="perfil-list-item17">
+            <ion-avatar item-left>
+                <img/>
+            </ion-avatar>
+            <h2>
+                {{ "Nome" | translate }} : {{'Arrumar aqui'}}
+            </h2>
+        </ion-item>
+    </ion-list>
+    <p style="text-align:center;"> {{"Compartilhe em grupos ou amigos, ajude o PET a ser adotado rapidamente." |
+        translate}}</p>
+
+    <button ion-button block style="background: limegreen;" (click)="whatsappShare()">
+        <ion-icon name="logo-whatsapp"></ion-icon>
+        WhatsApp
     </button>
-  </div>
-  
-
-  <div id="perfil-markdown4" style="text-align:center;" class="show-list-numbers-and-dots">
-    <p style="color:#000000;">
-      {{ "Responsável" | translate }}
-    </p>
-  </div>
-  <ion-list id="perfil-list5">
-    <ion-item color="none" id="perfil-list-item17">
-      <ion-avatar item-left>
-        <img />
-      </ion-avatar>
-      <h2>
-        {{ "Nome" | translate }} : {{pet.user}}
-      </h2>
-    </ion-item>
-    <ion-item color="none" id="perfil-list-item10">
-      <ion-icon name="mail" item-left></ion-icon>
-      Email
-    </ion-item>
-    <ion-item color="none" id="perfil-list-item16">
-      <ion-icon name="pin" item-left></ion-icon>
-      {{ "Localização" | translate }}
-    </ion-item>
-  </ion-list>
- <p style="text-align:center;"> {{"Compartilhe em grupos ou amigos, ajude o PET a ser adotado rapidamente." | translate}}</p>
-
-    <button ion-button block style="background: limegreen;"  (click)="whatsappShare()"> <ion-icon name="logo-whatsapp"></ion-icon>  WhatsApp</button>
-    <button ion-button block style="background: royalblue;"  (click)="facebookShare()"> <ion-icon name="logo-facebook"></ion-icon>  Facebook</button>
-
 
 </ion-content>
