--- a/src/pages/adote/adote.html
+++ b/src/pages/adote/adote.html
@@ -1,11 +1,20 @@
 <ion-header>
-    <ion-navbar color="danger">
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>
-            {{"Adote" | translate}}
-        </ion-title>
+    <!--<ion-navbar class="toolbar toolbar-ios toolbar-danger" color="danger" style="background-image: url('../assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;" ng-reflect-color="danger"><div class="toolbar-background toolbar-background-ios" ng-reflect-klass="toolbar-background" ng-reflect-ng-class="toolbar-background-ios" style=""></div><button class="back-button disable-hover bar-button bar-button-ios back-button-ios bar-button-default bar-button-default-ios" ion-button="bar-button" ng-reflect-klass="back-button" ng-reflect-ng-class="back-button-ios"><span class="button-inner"><ion-icon class="back-button-icon icon icon-ios back-button-icon-ios ion-ios-arrow-back" role="img" ng-reflect-klass="back-button-icon" ng-reflect-ng-class="back-button-icon-ios" aria-label="arrow back" ng-reflect-name="ios-arrow-back"></ion-icon><span class="back-button-text back-button-text-ios" ng-reflect-klass="back-button-text" ng-reflect-ng-class="back-button-text-ios">Back</span></span><div class="button-effect"></div></button><button ion-button="" menutoggle="" class="disable-hover bar-buttons bar-buttons-ios bar-button bar-button-ios bar-button-default bar-button-default-ios bar-button-menutoggle bar-button-menutoggle-ios" ng-reflect-menu-toggle="" hidden="" style=""><span class="button-inner">-->
+            <!--<ion-icon name="menu" role="img" class="icon icon-ios ion-ios-menu" aria-label="menu" ng-reflect-name="menu"></ion-icon>-->
+        <!--</span><div class="button-effect"></div></button><div class="toolbar-content toolbar-content-ios" ng-reflect-klass="toolbar-content" ng-reflect-ng-class="toolbar-content-ios">-->
+
+        <!--<ion-title class="title title-ios" style=""><div class="toolbar-title toolbar-title-ios" ng-reflect-klass="toolbar-title" ng-reflect-ng-class="toolbar-title-ios">-->
+            <!--Adote-->
+        <!--</div></ion-title>-->
+    <!--</div></ion-navbar>-->
+
+    <ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
+    <button ion-button menuToggle>
+    <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+    {{ "Adote" | translate }}
+    </ion-title>
     </ion-navbar>
 </ion-header>
 <ion-content padding id="page4">
