--- a/src/pages/cadastrar/cadastrar.html
+++ b/src/pages/cadastrar/cadastrar.html
@@ -1,5 +1,11 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
+        <button ion-button menuToggle>
+            <ion-icon name="menu"></ion-icon>
+        </button>
+        <ion-title>
+            {{ "Cadastre" | translate }}
+        </ion-title>
     </ion-navbar>
 </ion-header>
 
