--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,37 +1,41 @@
-<ion-header >
-  <ion-navbar  hideBackButton="true">
+<ion-header>
+    <ion-navbar hideBackButton="true">
 
-  </ion-navbar>
+    </ion-navbar>
 </ion-header>
 <ion-content padding>
 
-  <ion-grid>
-    <ion-row>
-      <ion-col ><button ion-button block class="facebookButton" (click)="facebookLogin()">Logar com Facebook</button></ion-col>
-    </ion-row>
-    <!--<ion-row>-->
-      <!--<ion-col><button ion-button block class="googleButton">Logar com Google</button></ion-col>-->
-    <!--</ion-row>-->
-  </ion-grid>
+    <ion-grid>
+        <ion-row>
+            <ion-col>
+                <button ion-button block class="facebookButton" (click)="facebookLogin()">Logar com Facebook</button>
+            </ion-col>
+        </ion-row>
+        <!--<ion-row>-->
+        <!--<ion-col><button ion-button block class="googleButton">Logar com Google</button></ion-col>-->
+        <!--</ion-row>-->
+    </ion-grid>
 
-  <div class="hrLine"><span>OU</span></div>
+    <div class="hrLine"><span>OU</span></div>
 
-  <ion-list no-lines padding-top>
-    <ion-item>
-      <ion-input type="text" placeholder="Username" [(ngModel)]="user.email" name="email"></ion-input>
-    </ion-item>
-    <ion-item>
-      <ion-input type="password" placeholder="Password" [(ngModel)]="user.password" name="password"></ion-input>
-    </ion-item>
-  </ion-list>
-  <button ion-button block round color="secondary" (click)="login(user)">Login</button>
+    <form>
+        <ion-list no-lines padding-top>
+            <ion-item>
+                <ion-input type="text" placeholder="Username" [(ngModel)]="user.email" name="email"></ion-input>
+            </ion-item>
+            <ion-item>
+                <ion-input type="password" placeholder="Password" [(ngModel)]="user.password"
+                           name="password"></ion-input>
+            </ion-item>
+        </ion-list>
+        <button ion-button block round color="secondary" (click)="login(user)">Login</button>
+    </form>
+    <div padding-top>
+        <button ion-button block color="light" clear (click)="register()">Não tem uma conta? Cadastre-se</button>
 
-  <div padding-top>
-    <button ion-button block color="light" clear (click)="register()">Não tem uma conta? Cadastre-se</button>
+        <button ion-button block color="light" clear (click)="recuperarSenha()">Esqueceu a Senha</button>
 
-    <button ion-button block color="light" clear (click)="recuperarSenha()">Esqueceu a Senha</button>
-
-    <!--<button ion-button block color="light" clear (click)="anonimo()">Logar como Anônimo</button>-->
-  </div>
+        <!--<button ion-button block color="light" clear (click)="anonimo()">Logar como Anônimo</button>-->
+    </div>
 
 </ion-content>
