--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-navbar>
+    <ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
