Listagem dos pets melhorada, cadastrar usuario e login melhorados.

--- a/src/pages/mensagem/mensagem.html
+++ b/src/pages/mensagem/mensagem.html
@@ -13,7 +13,7 @@
              class="message"
              [class.left]=" msg.autor != myId"
              [class.right]=" msg.autor === myId">
-            <img class="user-img" [src]="msg.img" alt="" src="">
+            <!--<img class="user-img" [src]="msg.img" alt="" src="">-->
             <div class="msg-detail">
                 <div class="msg-info">
                     <p>
