--- a/src/pages/user-perfil/user-perfil.html
+++ b/src/pages/user-perfil/user-perfil.html
@@ -1,11 +1,4 @@
 <ion-header>
-    <!--<ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('../assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">-->
-        <!--<button ion-button menuToggle>-->
-            <!--<ion-icon name="menu"></ion-icon>-->
-        <!--</button>-->
-        <!--<ion-title>{{ "Perfil" | translate }}</ion-title>-->
-    <!--</ion-navbar>-->
-
     <ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
 
     <ion-title>
@@ -43,4 +36,9 @@
         </div>
 
     </div>
+  <ion-footer>
+    <button ion-button block (click)="logOf()">
+      Sair
+    </button>
+  </ion-footer>
 </ion-content>
