--- a/src/pages/adicionar-pet/adicionar-pet.html
+++ b/src/pages/adicionar-pet/adicionar-pet.html
@@ -1,148 +1,151 @@
 <ion-header>
-    <ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
-        <button ion-button menuToggle>
-            <ion-icon name="menu"></ion-icon>
-        </button>
-        <ion-title>
-            {{ "Adicionar Pet" | translate }}
-        </ion-title>
-    </ion-navbar>
+  <ion-navbar class="toolbar toolbar-danger" color="danger"
+              style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <ion-title>
+      {{ "Adicionar Pet" | translate }}
+    </ion-title>
+  </ion-navbar>
 
 </ion-header>
-<ion-content class="bgdLogin" padding id="page3.1" *ngIf="!canEnter" >
-    <please-login></please-login>
+<ion-content class="bgdLogin" padding id="page3.1" *ngIf="!canEnter">
+  <please-login></please-login>
 </ion-content>
 
 <ion-content padding id="page3" *ngIf="canEnter">
 
-    <img *ngIf="photoUrls.length == 0" src="assets/img/NsepPTAR9CVtubPYQpQ5_noimglarge.png"
-         style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;"/>
-    <ion-slides pager="true" *ngIf="photoUrls.length">
-        <ion-slide *ngFor="let photo of photoUrls">
-            <img [src]="photo.img"/>
-        </ion-slide>
-    </ion-slides>
+  <img *ngIf="photoData.length == 0" src="assets/img/NsepPTAR9CVtubPYQpQ5_noimglarge.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;"/>
+  <ion-slides pager="true" *ngIf="photoData.length">
+    <ion-slide *ngFor="let photo of photoData">
+      <img [src]="photo.img"/>
+    </ion-slide>
+  </ion-slides>
 
 
-    <form [formGroup]="post">
+  <form [formGroup]="post">
 
-        <div style="width: 50%; float: left;">
-            <button (click)="takePhoto()" ion-button icon-left color="assertive"
-                    style="width: 100%;">
-                <ion-icon name="camera"></ion-icon>
-                {{ "Câmera" | translate }}
-            </button>
-        </div>
-        <div style="width: 50%; float: left;">
-            <button (click)="takeGallery()" ion-button icon-left color="assertive"
-                    style="width: 100%;">
-                <ion-icon name="images"></ion-icon>
-                {{ "Galeria" | translate }}
-            </button>
-        </div>
-        <div class="spacer" style="width:300px;height:100px;"></div>
-        <ion-item>
-            <ion-label>
-                {{ "Nome do Pet" | translate }}
-            </ion-label>
-            <ion-input type="text" name="nome" formControlName="nome" [(ngModel)]="post.nome"></ion-input>
-        </ion-item>
-        <div class="spacer" style="width:300px;height:45px;" id="adicionarPet-spacer3"></div>
-        <ion-item id="adicionarPet-select1">
-            <ion-label>
-                {{ "Espécie" | translate }}
-            </ion-label>
-            <ion-select name="especie" formControlName="especie" [(ngModel)]="post.especie"
-                        (ngModelChange)="onChange($event)">
-                <ion-option value="Canina">
-                    {{ "Canina" | translate }}
-                </ion-option>
-                <ion-option value="Felina">
-                    {{ "Felina" | translate }}
-                </ion-option>
-                <ion-option value="Outros">
-                    {{ "Outros" | translate }}
-                </ion-option>
-            </ion-select>
-        </ion-item>
-        <ion-item>
-            <ion-label>
-                {{ "Raça" | translate }}
-            </ion-label>
+    <div style="width: 50%; float: left;">
+      <button (click)="takePhoto()" ion-button icon-left color="assertive"
+              style="width: 100%;">
+        <ion-icon name="camera"></ion-icon>
+        {{ "Câmera" | translate }}
+      </button>
+    </div>
+    <div style="width: 50%; float: left;">
+      <button (click)="takeGallery()" ion-button icon-left color="assertive"
+              style="width: 100%;">
+        <ion-icon name="images"></ion-icon>
+        {{ "Galeria" | translate }}
+      </button>
+    </div>
+    <div class="spacer" style="width:300px;height:100px;"></div>
+    <ion-item>
+      <ion-label>
+        {{ "Nome do Pet" | translate }}
+      </ion-label>
+      <ion-input type="text" name="nome" formControlName="nome" [(ngModel)]="post.nome"></ion-input>
+    </ion-item>
+    <div class="spacer" style="width:300px;height:45px;" id="adicionarPet-spacer3"></div>
+    <ion-item id="adicionarPet-select1">
+      <ion-label>
+        {{ "Espécie" | translate }}
+      </ion-label>
+      <ion-select name="especie" formControlName="especie" [(ngModel)]="post.especie"
+                  (ngModelChange)="onChange($event)">
+        <ion-option value="Canina">
+          {{ "Canina" | translate }}
+        </ion-option>
+        <ion-option value="Felina">
+          {{ "Felina" | translate }}
+        </ion-option>
+        <ion-option value="Outros">
+          {{ "Outros" | translate }}
+        </ion-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label>
+        {{ "Raça" | translate }}
+      </ion-label>
 
-            <ion-select name="raca" id="raca" (change)="onItemChange($event.target.value)"
-                        [(ngModel)]="post.raca" formControlName="raca">
-                <ion-option checked value="">empty</ion-option>
-                <!--<ion-option aria-checked="undefined" *ngFor="let selectedRaca of selectedRacas" [value]="" >{{selectedRaca}} </ion-option>-->
-                <ion-option *ngFor="let item of selectedRacas" [value]="">{{item}}</ion-option>
-            </ion-select>
-        </ion-item>
+      <ion-select name="raca" id="raca" (change)="onItemChange($event.target.value)"
+                  [(ngModel)]="post.raca" formControlName="raca">
+        <ion-option checked value=""></ion-option>
+        <!--<ion-option aria-checked="undefined" *ngFor="let selectedRaca of selectedRacas" [value]="" >{{selectedRaca}} </ion-option>-->
+        <ion-option *ngFor="let item of selectedRacas" [value]="">{{item}}</ion-option>
+      </ion-select>
+    </ion-item>
 
-        <div class="spacer" style="width:300px;height:45px;"></div>
-        <ion-item>
-            <ion-label>
-                {{ "Idade" | translate }}
-            </ion-label>
-            <ion-select name="idade" formControlName="idade" [(ngModel)]="post.idade">
-                <ion-option value="{{ '1 a 3 meses' | translate }}">
-                    {{ "1 a 3 meses" | translate }}
-                </ion-option>
-                <ion-option value="{{ '1 a 3 meses' | translate }}">
-                    {{ "3 a 6 meses" | translate }}
-                </ion-option>
-                <ion-option value="{{ '1 a 3 meses' | translate }}">
-                    {{ "6 a 9 meses" | translate }}
-                </ion-option>
-                <ion-option value="{{ '1 a 3 meses' | translate }}">
-                    {{ "9 a 12 meses" | translate }}
-                </ion-option>
-                <ion-option value="{{ '1 a 3 meses' | translate }}">
-                    {{ "1 a 3 anos" | translate }}
-                </ion-option>
-                <ion-option value="{{ '1 a 3 meses' | translate }}">
-                    {{"Acima de 3 anos" | translate }}
-                </ion-option>
+    <div class="spacer" style="width:300px;height:45px;"></div>
+    <ion-item>
+      <ion-label>
+        {{ "Idade" | translate }}
+      </ion-label>
+      <ion-select name="idade" formControlName="idade" [(ngModel)]="post.idade">
+        <ion-option value="{{ '1 a 3 meses' | translate }}">
+          {{ "1 a 3 meses" | translate }}
+        </ion-option>
+        <ion-option value="{{ '3 a 6 meses' | translate }}">
+          {{ "3 a 6 meses" | translate }}
+        </ion-option>
+        <ion-option value="{{ '6 a 9 meses' | translate }}">
+          {{ "6 a 9 meses" | translate }}
+        </ion-option>
+        <ion-option value="{{ '9 a 12 meses' | translate }}">
+          {{ "9 a 12 meses" | translate }}
+        </ion-option>
+        <ion-option value="{{ '1 a 3 anos' | translate }}">
+          {{ "1 a 3 anos" | translate }}
+        </ion-option>
+        <ion-option value="{{ 'Acima de 3 anos' | translate }}">
+          {{"Acima de 3 anos" | translate }}
+        </ion-option>
 
-            </ion-select>
+      </ion-select>
 
-        </ion-item>
+    </ion-item>
 
-        <ion-item>
-            <ion-label>
-                {{ "Sexo" | translate }}
-            </ion-label>
-            <ion-select name="sexo" formControlName="sexo" [(ngModel)]="post.sexo">
-                <ion-option value="Mâcho">
-                    {{ "Macho" | translate }}
-                </ion-option>
-                <ion-option value="Femêa">
-                    {{ "Femêa" | translate }}
-                </ion-option>
-                <ion-option value="Desconhecido">
-                    {{ "Desconhecido" | translate }}
-                </ion-option>
-            </ion-select>
-        </ion-item>
+    <ion-item>
+      <ion-label>
+        {{ "Sexo" | translate }}
+      </ion-label>
+      <ion-select name="sexo" formControlName="sexo" [(ngModel)]="post.sexo">
+        <ion-option value="Mâcho">
+          {{ "Macho" | translate }}
+        </ion-option>
+        <ion-option value="Femêa">
+          {{ "Femêa" | translate }}
+        </ion-option>
+        <ion-option value="Desconhecido">
+          {{ "Desconhecido" | translate }}
+        </ion-option>
+      </ion-select>
+    </ion-item>
 
-        <ion-item>
-            <ion-label>
-                WhatsApp
-            </ion-label>
-            <ion-input type="number" name="whats" formControlName="whatsapp" [(ngModel)]="post.whatsapp"></ion-input>
-        </ion-item>
-        <ion-item>
-            <ion-label stacked>
-                {{ "Informações Adicionais" | translate }}
-            </ion-label>
-            <ion-input name="informacoes" type="text" placeholder="{{'Conte-nos um pouco sobre o Pet' | translate}}"
-                       formControlName="informacoes" [(ngModel)]="post.informacoes">
-            </ion-input>
-        </ion-item>
+    <ion-item>
+      <ion-label>
+        WhatsApp
+      </ion-label>
+      <ion-input type="number" name="whats" formControlName="whatsapp" [(ngModel)]="post.whatsapp"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked>
+        {{ "Informações Adicionais" | translate }}
+      </ion-label>
+      <ion-input name="informacoes" type="text" placeholder="{{'Conte-nos um pouco sobre o Pet' | translate}}"
+                 formControlName="informacoes" [(ngModel)]="post.informacoes">
+      </ion-input>
+    </ion-item>
 
-        <button ion-button color="assertive" block type="submit" [disabled]="!post.valid" (click)="addPost()"
-                style="border-radius:100px 100px 100px 100px;">
-            {{"Publicar" | translate}}
-        </button>
+    <button ion-button color="assertive" block type="submit" [disabled]="!post.valid" (click)="addPost()"
+            *ngIf="!showloader"
+            style="border-radius:100px 100px 100px 100px;">
+      {{"Publicar" | translate}}
+    </button>
 
-    </form>
+  </form>
 </ion-content>
+"C:\Program Files\Java\jdk1.8.0_121\bin\jarsigner.exe" -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore my-release-key.jks app-release-unsigned.apk my-alias
+"C:\ionic2\adotapet\zipalign" -v 4 app-release-unsigned.apk AdotaPetV2.apk
