--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -1,5 +1,6 @@
 <ion-header>
-    <ion-navbar class="toolbar toolbar-danger" color="danger" style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
+    <ion-navbar class="toolbar toolbar-danger" color="danger"
+                style="background-image: url('assets/img/bgMenuAdotaPet.png') !important;height: 80px;width: 100%;background-size: 100% 100%;">
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
@@ -8,16 +9,13 @@
         </ion-title>
     </ion-navbar>
 </ion-header>
-<ion-content padding id="page8" *ngIf="pet">
+<ion-content>
 
     <ion-card id="perfil-card22">
         <ion-list>
             <ion-item color="none" id="perfil-list-item9">
-                <ion-avatar item-left>
-                    <img/>
-                </ion-avatar>
                 <h2>
-                    {{pet.nome}}
+                    {{pet?.nome}}
                 </h2>
             </ion-item>
             <ion-slides pager="true">
@@ -25,44 +23,35 @@
                     <img [src]="photo"/>
                 </ion-slide>
             </ion-slides>
-            <div id="perfil-markdown3" style="text-align:justify;" class="show-list-numbers-and-dots">
-                <p style="color:#000000;">
+            <ion-item id="perfil-markdown3" style="text-align:justify;" class="show-list-numbers-and-dots">
+                <p style="color:#000000;" text-wrap>
                     {{pet.informacoes}}
                 </p>
-            </div>
-            <ion-item color="none" id="perfil-list-item11">
+            </ion-item>
+            <ion-item id="perfil-list-item11" class="show-list-numbers-and-dots">
                 <ion-icon name="paw" item-left></ion-icon>
-                {{ "Espécie" | translate }} : {{pet.especie}}
+                {{ "Espécie" | translate }} : {{pet.especie || 'Não informada'}}
             </ion-item>
-            <ion-item color="none" id="perfil-list-item12">
+            <ion-item id="perfil-list-item12">
                 <ion-icon name="logo-octocat" item-left></ion-icon>
-                {{ "Raça" | translate }} : {{pet.raca}}
+                {{ "Raça" | translate }} : {{pet.raca || 'Não informada'}}
             </ion-item>
-            <ion-item color="none" id="perfil-list-item13">
+            <ion-item id="perfil-list-item13">
                 <ion-icon name="female" item-left></ion-icon>
-                {{"Sexo" | translate }} : {{pet.sexo}}
+                {{"Sexo" | translate }} : {{pet.sexo || 'Não informado'}}
             </ion-item>
-            <ion-item color="none" id="perfil-list-item14">
+            <ion-item id="perfil-list-item14">
                 <ion-icon name="information-circle" item-left></ion-icon>
-                {{"Idade" | translate }} : {{pet.idade}}
+                {{"Idade" | translate }} : {{pet.idade || 'Não informada'}}
             </ion-item>
-            <ion-item color="none" id="perfil-list-item15">
-                <ion-icon name="whatsapp" item-left></ion-icon>
-                {{"Whats" | translate }} : {{pet.whatsapp}}
+            <ion-item id="perfil-list-item15">
+                <ion-icon name="logo-whatsapp" item-left></ion-icon>
+                {{"Whats" | translate }} : {{pet.whatsapp || 'Não informado'}}
             </ion-item>
         </ion-list>
     </ion-card>
 
-    <!--<div *ngIf="!donoDaPostagem" >-->
-    <!--<button id="perfil-button7" ion-button color="assertive" block (click)="goToChat()">-->
-    <!--Abrir Chat-->
-    <!--</button>-->
-    <!--</div>-->
-    <!--<div *ngIf="donoDaPostagem">-->
-    <!--<button id="marcarAdotado" ng-click="marcarAdotado(petPerfil, petKey)" class="button button-assertive  button-block">Marcar como adotado</button>-->
-    <!--</div>-->
-
-    <div *ngIf="!donoDaPostagem">
+    <div *ngIf="!donoDaPostagem || !usuarioAtual">
         <button id="abrirChat" ion-button color="assertive" block (click)="goToChat()">
             {{ "Abrir Chat" | translate }}
         </button>
@@ -74,14 +63,14 @@
             {{ "Responsável" | translate }}
         </p>
     </div>
-    <ion-list id="perfil-list5">
-        <ion-item color="none" id="perfil-list-item17">
+    <ion-list>
+        <ion-item>
             <ion-avatar item-left>
-                <img/>
+                <img src="assets/default-user.jpg"/>
             </ion-avatar>
-            <h2>
-                {{ "Nome" | translate }} : {{'Arrumar aqui'}}
-            </h2>
+            <p>
+                {{ "Nome" | translate }} : {{dono || 'Não informado'}}
+            </p>
         </ion-item>
     </ion-list>
     <p style="text-align:center;"> {{"Compartilhe em grupos ou amigos, ajude o PET a ser adotado rapidamente." |
