--- a/src/pages/adicionar-pet/adicionar-pet.html
+++ b/src/pages/adicionar-pet/adicionar-pet.html
@@ -16,10 +16,10 @@
 
 <ion-content padding id="page3" *ngIf="canEnter">
 
-  <img *ngIf="photoData.length == 0" src="assets/img/NsepPTAR9CVtubPYQpQ5_noimglarge.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;"/>
-  <ion-slides pager="true" *ngIf="photoData.length">
-    <ion-slide *ngFor="let photo of photoData">
-      <img [src]="photo.img"/>
+  <img *ngIf="!photoData.img" src="assets/img/NsepPTAR9CVtubPYQpQ5_noimglarge.png" style="display:block;width:100%;height:auto;margin-left:auto;margin-right:auto;"/>
+  <ion-slides pager="true" *ngIf="photoData.img">
+    <ion-slide>
+      <img [src]="photoData.img"/>
     </ion-slide>
   </ion-slides>
 
