VERSAO QUE TA NA LOJA 01/05/2019( ALTERAÇOES NO CHAT - CHAT INCOMPLETO).

--- a/src/pages/user-perfil/user-perfil.html
+++ b/src/pages/user-perfil/user-perfil.html
@@ -21,7 +21,7 @@
                 {{ "Meus Pets" | translate }}
             </ion-segment-button>
             <ion-segment-button value="two">
-                {{ "Menssagens" | translate }}
+                {{ "Mensagens" | translate }}
             </ion-segment-button>
         </ion-segment>
     </ion-toolbar>
