--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -11,9 +11,6 @@
                 <button ion-button block class="facebookButton" (click)="facebookLogin()">Logar com Facebook</button>
             </ion-col>
         </ion-row>
-        <!--<ion-row>-->
-        <!--<ion-col><button ion-button block class="googleButton">Logar com Google</button></ion-col>-->
-        <!--</ion-row>-->
     </ion-grid>
 
     <div class="hrLine"><span>OU</span></div>
@@ -21,10 +18,10 @@
     <form>
         <ion-list no-lines padding-top>
             <ion-item>
-                <ion-input type="text" placeholder="Username" [(ngModel)]="user.email" name="email"></ion-input>
+                <ion-input type="text" placeholder="Usuário" [(ngModel)]="user.email" name="email"></ion-input>
             </ion-item>
             <ion-item>
-                <ion-input type="password" placeholder="Password" [(ngModel)]="user.password"
+                <ion-input type="password" placeholder="Senha" [(ngModel)]="user.password"
                            name="password"></ion-input>
             </ion-item>
         </ion-list>
